# TheraDuty

./: README.md  test.sh
.github/workflows/: acceptance_cycle.yml  commit_cycle.yml  push_to_main.yml
games_file/godot/: hands.py  server.py
games_file/python/: body.py  cv2_utils.py  memo.py  requirements.txt
games_file/python/alzheimer/: body.py  chimpanze.py  cv2_utils.py  memo.py  memo_unit_test.py
hand_tracking/: __init__.py  hand_tracking.py
hand_tracking/hand_tracking_lib/: cv2_utils.py
launcher/: CMakeLists.txt  main.cpp  test.sh
launcher/games/: memo
